(WIP) Adding migrations...

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Changhwan Choi <changhwan@alice.finance>",
   "license": "MIT",
   "scripts": {
+    "build": "./node_modules/.bin/truffle compile --all && node scripts/build.js",
     "test": "scripts/test.sh",
     "test:coverage": "./node_modules/.bin/solidity-coverage",
     "prettier": "./node_modules/.bin/prettier contracts/**/*.sol --write ",
@@ -23,11 +24,15 @@
     "chai-bn": "^0.2.0",
     "dotenv": "^8.1.0",
     "ganache-cli": "^6.7.0",
+    "husky": "^3.0.5",
+    "loom-js": "^1.55.0",
     "loom-truffle-provider": "^0.13.0",
     "openzeppelin-solidity": "^2.3.0",
     "openzeppelin-test-helpers": "^0.4.3",
+    "ora": "^4.0.1",
     "prettier": "^1.18.2",
     "prettier-plugin-solidity": "^1.0.0-alpha.33",
+    "readline-sync": "^1.4.10",
     "solhint": "^2.2.0",
     "solidity-coverage": "^0.6.7",
     "truffle": "^5.0.37"
