--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alice-finance/dao-contracts",
-  "version": "1.0.0",
+  "version": "0.1.0-beta.1",
   "files": [
     "contracts"
   ],
